Add option to use select2's placeholder as title
Allows the select2 field's placeholder attribute to display the title
when having the title displayed externally does not fit styling.

--- a/dal_admin_filters/templates/dal_admin_filters/autocomplete-filter.html
+++ b/dal_admin_filters/templates/dal_admin_filters/autocomplete-filter.html
@@ -1,8 +1,12 @@
 {% load i18n %}
-<h3>{% blocktrans with filter_title=title %} By {{ filter_title }} {% endblocktrans %}</h3>
-<ul>
-    <li>{{ spec.rendered_widget }}</li>
-</ul>
+{% if not spec.is_placeholder_title %}
+    <h3>{% blocktrans with filter_title=title %} By {{ filter_title }} {% endblocktrans %}</h3>
+    <ul>
+        <li>{{ spec.rendered_widget }}</li>
+    </ul>
+{% else %}
+    {{ spec.rendered_widget }}
+{% endif %}
 <script>
     (function($) {
         $(document).ready(function () {
